iexplorehere.com (archived on 2009-06-16)
{
  "alexa_rank": 38838,
  "analysis_subcorpus": true,
  "categories": "",
  "char_count": 9297,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 16.26,
  "homepage_snapshot_redirected_domain": "iexplorehere.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090331220858id_/http://www.iexplorehere.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090331220858id_/http%3A//iexplorehere.com",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "iexplorehere.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090616180231id_/http%3A//edit.iexplorehere.com/privacy_policy",
  "policy_title": "",
  "policy_url": "edit.iexplorehere.com/privacy_policy",
  "sha1": "653bb6034294f6f45da05f622f1e2df2c9c307fe",
  "simhash": 9550305920477763609,
  "simhash_updated": false,
  "site_hostname": "iexplorehere.com",
  "site_url": "http://iexplorehere.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20090616180231",
  "word_count": 1455,
  "year": 2009
}

--- a/i/ie/iex/iexplorehere.com.html
+++ b/i/ie/iex/iexplorehere.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the iexplorehere.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217050845id_/http%3A//edit.iexplorehere.com/privacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the iexplorehere.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616180231id_/http%3A//edit.iexplorehere.com/privacy_policy) for the most accurate reproduction.-->
 
 <html><head>
 <link rel="shortcut icon" href="http://imgs1.iexplorehere.com/ieh.ico">
@@ -32,8 +32,9 @@ document.writeln('<script language="javascript" src="'+ enqhost +'.enquisite.com
 </head>
 <body leftmargin="0" topmargin="0" rightmargin="0" bottommargin="0">
 <form name="aspnetForm" method="post" action="privacy_policy.aspx" id="aspnetForm">
-<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwULLTEwMDUyNjYzMjgPZBYCZg9kFgICAQ9kFgICAw8WAh4HVmlzaWJsZWhkGAEFHl9fQ29udHJvbHNSZXF1aXJlUG9zdEJhY2tLZXlfXxYCBQ9jdGwwMCRpbWdzaWduSW4FD2N0bDAwJGJ0blNlYXJjaG2U4vhoUxM3zNlpjwKUbHulNbrZ">
+<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwULLTEwMDUyNjYzMjgPZBYCZg9kFgICAQ9kFgICAw8WAh4HVmlzaWJsZWhkGAEFHl9fQ29udHJvbHNSZXF1aXJlUG9zdEJhY2tLZXlfXxYCBQ9jdGwwMCRpbWdzaWduSW4FD2N0bDAwJGJ0blNlYXJjaACzeNpGd5KK/VRo/peoLaAlkmix">
 
+<input type="hidden" name="__EVENTVALIDATION" id="__EVENTVALIDATION" value="/wEWBwKgsZuSBgL02/OMAgLVzJXXCgLK6dTFDALE5ML0AgKlwLrZDAL9n+COAptn7xjKM7BEquDpx6FDJSPXmFJz">
 <table width="1000" border="0" align="center" cellpadding="0" cellspacing="0" bgcolor="#1E1916" class="border-main-r-l">
 <tbody><tr><td><table width="1000" border="0" cellspacing="0" cellpadding="0"><tbody><tr>
 <td valign="top"><table width="1000" border="0" cellspacing="0" cellpadding="0">
@@ -335,8 +336,7 @@ For questions concerning the product or your account, Email us at <a href="mailt
 <tr>
 <td valign="top" bgcolor="#1E1916"><a href="http://www.adeptmedia.in" rel="nofollow" target="_blank"><img src="http://imgs1.iexplorehere.com/logo-adeptmedia.gif" width="200" height="25" border="0" alt="Adept Media" title="Adept Media"></a></td>
 </tr>
-</tbody></table>
-<input type="hidden" name="__EVENTVALIDATION" id="__EVENTVALIDATION" value="/wEWBwLk7rb/BAL02/OMAgLVzJXXCgLK6dTFDALE5ML0AgKlwLrZDAL9n+COAhjuHBcLbv9o/kDjv7drJ//W5jZ3"></form>
+</tbody></table></form>
 
 
 </body></html>
