--- a/g/gr/gra/grandprix.com.html
+++ b/g/gr/gra/grandprix.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the grandprix.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217062611id_/http%3A//www.grandprix.com/hmppolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the grandprix.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616180309id_/http%3A//www.grandprix.com/hmppolicy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <title>F1 News - Grandprix.com</title>
@@ -20,7 +20,7 @@
 <meta name="DC.title" content="Grandprix.com">
 
 <meta name="author" content="Grandprix.com - First &amp; Fastest: The Original Online F1 News Service">
-<meta name="copyright" content="© 1988-2008 Inside F1, Inc.">
+<meta name="copyright" content="© 1988-2009 Inside F1, Inc.">
 <meta name="keywords" content="formula 1, F1, f1, formula1, inside f1, grandprix.com, insidef1.com, formula one, F1 racing, FIA, racingcars, racing, motorsport, autoracing, autos, grand prix, grandprix, cars, alonso, raikkonen, schumacher, massa, fisichella, button, barrichello, montoya, heidfeld, de la rosa, trulli, coulthard, villeneuve, webber, kubica, rosberg, klien, liuzi, speed, monteiro, albers, sato, ide, hamilton, paffett, kovalainen, zonta, piquet, badoer, rossiter, glock, vettel, montagny, doornbos, ammermuller, wurz, karthikeyan, nakajima, sutil, winkelhock, fauzy, valles, davidson, yamamoto, hakkinen, hill, mansell, alesi, verstappen, mclaren, williams, ferrari, honda, prost, renault, toyota, red bull, toro rosso, spyker, super aguri, benetton, minardi, sauber, senna, monte carlo, monaco, silverstone, spa, hockenheim, san marino, monza, magny cours, indianapolis, malaysia, bahrain, barcelona, montreal, hungary, turkey, japan, china">
 <meta name="description" content="The Original Online F1 News Service.">
 
@@ -45,7 +45,7 @@ urchinTracker();
 <ul id="navigation">
 <li id="menu-blankleft">&nbsp;</li>
 <li id="menu-home"><a href="/index.html">Home</a></li>
-<li id="menu-f1"><a href="/f12008/overview.html">F1&nbsp;2008</a></li>
+<li id="menu-f1"><a href="/f12009/overview.html">F1&nbsp;2009</a></li>
 <li id="menu-news"><a href="/news.html">News</a></li>
 <li id="menu-features"><a href="/features.html">Features</a></li>
 <li id="menu-gpe"><a href="/gpe/encyclopedia.html">GP&nbsp;Encyclopedia</a></li>
@@ -215,19 +215,16 @@ google_color_url = "1A097E";
 
 <div class="gptf728x90ad">
 <!-- TF 728x90 JScript VAR NoAD code -->
-<script language="javascript"><!--
-document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.ad?site=GrandPrixcom&adSpace=ROS&size=728x90&type=var&noAd=1&requestID='+((new Date()).getTime() % 2147483648) + Math.random()+'"></scr'+'ipt>');
-//-->
-</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=GrandPrixcom&amp;adSpace=ROS&amp;size=728x90&amp;type=var&amp;noAd=1&amp;requestID=20744186170.8132673159305346"></script>
-<noscript>
-<a href="http://a.tribalfusion.com/i.click?site=GrandPrixcom&adSpace=ROS&size=728x90&requestID=631478999" target=_blank>
-<img src="http://a.tribalfusion.com/i.ad?site=GrandPrixcom&adSpace=ROS&size=728x90&requestID=631478999" width=728 height=90 border=0 alt="Click Here"></a>
-</noscript>
-
+<script type="text/javascript"><!--
+   e9 = new Object();
+   e9.size = "728x90,468x60";
+   e9.noAd = 1;
+//--></script>
+<script type="text/javascript" src="http://tags.expo9.exponential.com/tags/GrandPrixcom/ROS/tags.js"></script>
 <!-- TF 728x90 JScript VAR NoAD code -->
 </div>
 
-<p class="print-footer">Copyright 1988-2008, Inside F1, Inc.</p>
+<p class="print-footer">Copyright 1988-2009, Inside F1, Inc.</p>
 <!-- End content -->
 </div>
 
@@ -236,8 +233,8 @@ document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.
 </div>
 
 <div id="footer">
-<p><a href="/index.html">HOME</a> | <a href="/f12008/overview.html">F1 2008</a> | <a href="/news.html">NEWS</a> | <a href="/features.html">FEATURES</a> | <a href="/gpe/encyclopedia.html">GP ENCYCLOPEDIA</a> | <a href="http://forum.grandprix.com/">FORUM</a> | <a href="http://store.grandprix.com/">STORE</a></p>
-<p>Copyright 1988-2008, Inside F1, Inc. — <a href="/hmterms.html">Terms of Use</a>, <a href="/hmcopyright.html">Copyright</a>, and <a href="/hmppolicy.html">Privacy Policy</a> — <a href="/contact.html">Contact</a> — <a href="/advertise.html">Advertise</a></p>
+<p><a href="/index.html">HOME</a> | <a href="/f12009/overview.html">F1 2009</a> | <a href="/news.html">NEWS</a> | <a href="/features.html">FEATURES</a> | <a href="/gpe/encyclopedia.html">GP ENCYCLOPEDIA</a> | <a href="http://forum.grandprix.com/">FORUM</a> | <a href="http://store.grandprix.com/">STORE</a></p>
+<p>Copyright 1988-2009, Inside F1, Inc. — <a href="/hmterms.html">Terms of Use</a>, <a href="/hmcopyright.html">Copyright</a>, and <a href="/hmppolicy.html">Privacy Policy</a> — <a href="/contact.html">Contact</a> — <a href="/advertise.html">Advertise</a></p>
 <p><a href="#top"><span id="footerlink">Back to top</span></a> — <a href="#" onclick="print_preview(); return false;"><span id="footerprint">Print Page</span></a></p>
 </div>
 
