--- a/m/mo/mot/motime.com.html
+++ b/m/mo/mot/motime.com.html
@@ -1,8 +1,8 @@
-<!--The following is the downloaded HTML source of the motime.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217040650id_/http%3A//www.motime.com/node/view/139394) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the motime.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616180313id_/http%3A//www.motime.com/node/view/139394) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/2002/REC-xhtml1-20020801/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="it" xml:lang="it"><head>
-  <!-- php by: shams02 -->
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/2002/REC-xhtml1-20020801/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="it" xml:lang="it" xmlns:fb="http://www.facebook.com/2008/fbml"><head>
+  <!-- php by: shams01 -->
   <base href="http://www.motime.com/">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="keywords" content="blog, blogging, tool, hosted, solution, BLOG, blogs, weblog, web log, diary, personal diary, on line diary, online diary, motime, MOTIME, Motime, create a blog, blog tools, blog directory, free blog, blog template, blogger, e-journal, personal website, personal site, personal page, homepage, home page, community blogging, community blog, community website, community, online journalism, on line journalism, publish, personal publishing, nanopublishing">
@@ -12,13 +12,14 @@
   <title>Privacy Policy</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <link rel="shortcut icon" href="/misc/img/favicon.ico" type="image/x-icon">
-  <link type="text/css" rel="stylesheet" href="/themes/multisite/motime7/css/style.css?v=081129.1802">
+  <link type="text/css" rel="stylesheet" href="/themes/multisite/motime7/css/style.css?v=0906011434">
   
-  <script type="text/javascript" src="/includes/js/common.js?v=081129.1802"></script>
-<script type="text/javascript" src="/includes/js/jquery.js?v=081129.1802"></script>
-<script type="text/javascript" src="/includes/js/drupal.js?v=081129.1802"></script>
-<script type="text/javascript" src="/includes/js/jcommon.js?v=081129.1802"></script>
-<script type="text/javascript" src="/includes/js/overlib.js?v=081129.1802"></script>
+  <script type="text/javascript" src="/includes/js/common.js?v=0906011434"></script>
+<script type="text/javascript" src="/includes/js/jquery.js?v=0906011434"></script>
+<script type="text/javascript" src="/includes/js/drupal.js?v=0906011434"></script>
+<script type="text/javascript" src="/includes/js/facebook.js?v=0906011434"></script>
+<script type="text/javascript" src="/includes/js/jcommon.js?v=0906011434"></script>
+<script type="text/javascript" src="/includes/js/overlib.js?v=0906011434"></script>
 <script type="text/javascript">jQuery.extend(Drupal.settings, { "basePath": "http://www.motime.com" });</script>
 <script type="text/javascript">var context = { "host": "site", "context": "node", "action": "view", "uri": "/node/view/139394" };</script>
 
@@ -26,7 +27,6 @@
 <script type="text/javascript">
 var pageid=Math.floor(Math.random()*1000000);
 </script>
-
 <script type="text/javascript" src="/themes/multisite/motime7/js/browser_selector.js"></script>
 
 <!-- GOOGLE AD MANAGER begin -->
@@ -57,30 +57,31 @@ var pageid=Math.floor(Math.random()*1000000);
 
 <body>
 <div id="overDiv" style="position:absolute; visibility:hidden; z-index:1000;"></div>
-<!--  <script type="text/javascript" src="/includes/js/overlib.js?v=081129.1802"></script>  -->
+<!--  <script type="text/javascript" src="/includes/js/overlib.js?v=0906011434"></script>  -->
 
 <!-- begin: HEADER -->
 
 <div id="header">
-<div class="wrapper">
+ <div class="wrapper">
+	<h1 class="logo"><a href="/" target="_top" title="Motime"><span>Motime</span></a></h1>
 
-		<h1 class="logo"><a href="/" target="_top" title="Motime"><span>Motime</span></a></h1>
+ 	<div class="no-account">		
+  	<span>
+     <a href="http://edit.motime.com/user/login"><strong>Log in</strong></a>  | <a href="#" onclick="facebook_button_onclick();"><strong>Login in with Facebook</strong></a><br>or <a href="http://edit.motime.com/signup" title="Register now!"><strong>Register!</strong></a>
+    </span>
+		<div class="clear"></div>
+	</div>
+ 
+  <ul class="top-menu">
+        <li id="topbar_home" class="">
+      <span>
+        <a href="http://www.motime.com" target="_top">Home</a>
+       </span>
+    </li>
+      </ul>
 
-
-	
-
-
-	    		<div class="no-account">		
-			<span><a href="http://edit.motime.com/user/login"><strong>Log in</strong></a> or <a href="http://edit.motime.com/signup" title="Register now!"><strong>Register!</strong></a></span>
-			<div class="clear"></div>
-		</div>
-	    
-<ul class="top-menu">
-			<li id="topbar_home" class=""><span><a href="http://www.motime.com" target="_top">Home</a></span></li>
-	</ul>
-
-<div class="clear"></div>
-</div>
+  <div class="clear"></div>
+ </div>
 </div>
 
 <!-- end: HEADER -->
@@ -88,8 +89,6 @@ var pageid=Math.floor(Math.random()*1000000);
 <!-- begin: TOOLBARS -->
 
 <div class="sub-menu">
-	
-
 	
 
 <div class="wrapper">
@@ -110,26 +109,31 @@ var pageid=Math.floor(Math.random()*1000000);
 		<a href="media/photo/latest" target="_top"><span>Photo</span></a>
 	</li>
 		<li class="">
+		<a href="media/video/latest" target="_top"><span>Video</span></a>
+	</li>
+		<li class="">
 		<a href="media/audio/latest" target="_top"><span>Audio</span></a>
 	</li>
 		<li class="">
-		<a href="media/video/latest" target="_top"><span>Video</span></a>
+		<a href="browse/group" target="_top"><span>Groups</span></a>
 	</li>
 			</ul>
+
+</div>
 
 
 <div class="clear"></div>
 </div>
-</div>
+
 
 <!-- -->
 
 <!-- end: TOOLBARS -->
 
+<div class="wrapper">	
+ <div id="main">
+  <div class="main">
 
-	<div class="wrapper">	
-		
-	<div id="main"><div class="main">
 
 
 <!-- begin: CONTENT -->
@@ -255,12 +259,74 @@ We will do everything in our power to maintain your privacy and online security.
 <!-- end: CONTENT --><!-- begin: FOOTER -->
 	<div class="clear"></div>
 	<div id="footer">
-		<a href="/">Home</a> | <a href="/node/view/139400" title="faq">FAQ</a> | <a href="/node/view/1476" title="online user guide">User's manual</a> | <a href="/node/view/139405" title="the people behind motime">About us</a> | <a href="/node/view/139394" title="privacy policy">Privacy policy</a> | <a href="/node/view/139395" title="legal terms and condtions">Terms of use</a> | <a href="/node/view/139406" title="email, telephone, snailmail, sms, IM, smoke signals...">Contact</a> | © 2004-2008 <a href="http://www.blogo.it/">Blogo.it</a>, P. IVA 04699900967.
+		<a href="/">Home</a> | <a href="/node/view/139400" title="faq">FAQ</a> | <a href="/node/view/1476" title="online user guide">User's manual</a> | <a href="/node/view/139405" title="the people behind motime">About us</a> | <a href="/node/view/139394" title="privacy policy">Privacy policy</a> | <a href="/node/view/139395" title="legal terms and condtions">Terms of use</a> | <a href="/node/view/139406" title="email, telephone, snailmail, sms, IM, smoke signals...">Contact</a> | © 2004-2009 <a href="http://www.blogo.it/">Blogo.it</a>, P. IVA 04699900967.
 <script type="text/javascript">
 </script>
 	</div>
 
 
+<script src="http://static.ak.connect.facebook.com/js/api_lib/v0.4/FeatureLoader.js.php" type="text/javascript"></script>
+
+
+<script type="text/javascript">
+
+
+   var fb_user_logged_locally     = false;
+   var fb_user_exists             = false;
+   var fb_app_label               = "www.motime.com";
+   var fb_master_url              = "http://edit.motime.com/ajax.php?type=facebook";
+   var fb_error_username_lenght   = "The username must be at least 3 characters long!";
+   var fb_user_error_allowed_char = "Username's allowed characters are:<br/>letters,<br/>numbers,<br/>periods and underscores!";
+   var fb_no_username             = "No username given";
+   var fb_error_username_taken    = "The username given is already taken:<br/>please choose another username";
+   var fb_error_fb_trouble        = "We apologize but there are some trouble with Facebook Connect. Please report it to the admin.";
+
+   $(document).ready(function() {
+     FB_RequireFeatures(["XFBML"], function () {
+//       FB.FBDebug.logLevel = 4;
+//       FB.FBDebug.isEnabled = true;
+       FB.Facebook.init('05ef13d80b5c80e8e1669aa8f0e9b488','http://www.motime.com/fb_cb/740907/fb/connect/receiver',{'ifUserConnected':fb_connect_on_connected,'ifUserNotConnected':fb_connect_on_not_connected});
+     });
+   });
+   FB.ensureInit(function() {
+     fb_connect_init();      
+   });
+
+   function b_a(b) {return (b?'S':'N');}
+
+</script>
+
+
+<style>
+#backgroundPopup{display:none;position:fixed;_position:absolute;height:100%;width:100%;top:0;left:0;background:#000000;border:1px solid #cecece;z-index:1;}
+#popupContact{display:none;position:fixed;_position:absolute;height:430px;width:440px;background:#FFFFFF;border:2px solid #cecece;z-index:2;padding:12px;font-size:13px;}
+#popupContact h1{text-align:left;color:#6FA5FD;font-size:22px;font-weight:700;border-bottom:1px dotted #D3D3D3;padding-bottom:2px;margin-bottom:30px;}
+#popupFacebookClose{font-size:14px;line-height:14px;right:6px;top:4px;position:absolute;color:#6fa5fd;font-weight:700;display:block;}
+#popupFacebookLogout{font-size:14px;line-height:14px;left:6px;bottom:4px;position:absolute;color:#6fa5fd;font-weight:700;display:block;}
+</style>
+      
+<div id="popupContact">
+		<a href="#" id="popupFacebookClose" onclick="disablePopup()">x</a>
+		<h1><b>MO'TIME</b> with Facebook user's connection</h1>
+		<p id="contactArea">
+      Welcome,<br><br>
+			you are now logged into Facebook but not logged into Mo'time<br>
+			In order to log you in, you need to have a Mo'time account, so:<br>
+      </p><ul>
+       <li><b>If you already have an account</b>:<br>Close this popup, login normally and after the login your accounts will be connected</li>
+			 <li><b>If you don't have an account</b>:<br>Choose your preferred username: at least 3 characters and no more than 30. Allowed characters: letters, numbers, periods and underscores.<br><br>
+      Username: <input type="text" id="fb_username" name="fb_username" size="18" value="">
+      <input type="button" name="username" value="Save" size="18" onclick="fb_user_control()">
+       </li>
+      </ul>
+			<br><br>
+			<b>Click on X (right-top) to close the popup and Log you In</b> 
+			<br><br>
+      Or
+			<br><br>
+   		<a href="#" id="popupFacebookCloseLogout" onclick="facebook_logout_button();">Click here to Logout from facebook</a>
+		<p></p>
+	</div>
 <!-- Blognotifier: User not logged or web presences disabled to this User Role  -->
 
 <!-- end: FOOTER -->
@@ -269,9 +335,9 @@ We will do everything in our power to maintain your privacy and online security.
 <script type="text/javascript">
   var gajshost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
   document.write('<scr');
-  document.write('ipt src="' + gajshost + 'google-analytics.com/ga.js" type="text/javascript"><scr');
+  document.write('ipt src="' + gajshost + 'google-analytics.com/ga.js" type="text/javascript"></scr');
   document.write('ipt>');
-</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"><script>
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
 <script type="text/javascript">
   try {
     var pageTracker = _gat._getTracker("UA-4464365-7");
@@ -301,5 +367,11 @@ We will do everything in our power to maintain your privacy and online security.
 <!-- END Nielsen//NetRatings SiteCensus V5.3 -->
 
 
+</div>
+</div>
+</div>
+<div class="clear"></div>
 
-</div></div></div></body></html>
+
+
+</body></html>
