--- a/m/mo/moz/mozilla.org.html
+++ b/m/mo/moz/mozilla.org.html
@@ -1,31 +1,31 @@
-<!--The following is the downloaded HTML source of the mozilla.org privacy policy that was archived on 2008-09-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080914120423id_/http%3A//www.mozilla.org/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mozilla.org privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616180350id_/http%3A//www.mozilla.org/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html><head>
 <link rel="top" title="Home" href="http://www.mozilla.org/">
-<link rel="stylesheet" type="text/css" href="css/print.css" media="print">
-<link rel="stylesheet" type="text/css" href="css/base/content.css" media="all">
-<link rel="stylesheet" type="text/css" href="css/cavendish/content.css" title="Cavendish" media="screen">
-<link rel="stylesheet" type="text/css" href="css/base/template.css" media="screen">
-<link rel="stylesheet" type="text/css" href="css/cavendish/template.css" title="Cavendish" media="screen">
-<link rel="icon" href="images/mozilla-16.png" type="image/png">
+<link rel="stylesheet" type="text/css" href="../../css/print.css" media="print">
+<link rel="stylesheet" type="text/css" href="../../css/base/content.css" media="all">
+<link rel="stylesheet" type="text/css" href="../../css/cavendish/content.css" title="Cavendish" media="screen">
+<link rel="stylesheet" type="text/css" href="../../css/base/template.css" media="screen">
+<link rel="stylesheet" type="text/css" href="../../css/cavendish/template.css" title="Cavendish" media="screen">
+<link rel="icon" href="../../images/mozilla-16.png" type="image/png">
 
 <title>Mozilla Privacy Policy</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<script src="__utm.js" type="text/javascript"></script><script language="JavaScript1.5">_ujv='1.5';</script>
+<script src="../../__utm.js" type="text/javascript"></script><script language="JavaScript1.5">_ujv='1.5';</script>
 </head>
-<body id="www-mozilla-org" class="secondLevel sectionFoundation">
+<body id="www-mozilla-org" class="secondLevel sectionAbout">
 <div id="container">
 <p class="skipLink"><a href="#mainContent" accesskey="2">Skip to main content</a></p>
 <div id="header">
 <h1><a href="/" title="Return to home page" accesskey="1">Mozilla</a></h1>
 <ul>
-<li id="menu_aboutus"><a href="about/" title="Learn more about Mozilla">About</a></li>
-<li id="menu_foundation"><a href="foundation/" title="Information about the non-profit Mozilla Foundation">Foundation</a></li>
-<li id="menu_contribute"><a href="contribute/" title="Find out how to get involved with Mozilla">Contribute</a></li>
-<li id="menu_community"><a href="community/" title="List of community sites and other resources">Community</a></li>
-<li id="menu_developers"><a href="developer/" title="Resources and links for developers">Developers</a></li>
-<li id="menu_projects"><a href="projects/" title="Projects being created by the Mozilla community">Projects</a></li>
+<li id="menu_aboutus"><a href="../../about/" title="Learn more about Mozilla">About</a></li>
+<li id="menu_foundation"><a href="../../foundation/" title="Information about the non-profit Mozilla Foundation">Foundation</a></li>
+<li id="menu_contribute"><a href="../../contribute/" title="Find out how to get involved with Mozilla">Contribute</a></li>
+<li id="menu_community"><a href="../../community/" title="List of community sites and other resources">Community</a></li>
+<li id="menu_developers"><a href="../../developer/" title="Resources and links for developers">Developers</a></li>
+<li id="menu_projects"><a href="../../projects/" title="Projects being created by the Mozilla community">Projects</a></li>
 </ul>
 <form id="searchbox_002443141534113389537:ysdmevkkknw" action="http://www.google.com/cse" title="mozilla.org Search">
 <div>
@@ -42,16 +42,16 @@
 <div id="side">
 
 <ul id="nav">
-<li><a title="Mozilla Foundation" href="foundation/"><strong> Mozilla Foundation</strong></a>
+<li><a title="About Mozilla" href="../../about/"><strong> About Mozilla</strong></a>
 <ul>
-<li><a title="About the Foundation" href="foundation/about.html"> About the Foundation</a></li>
-<li><a title="Activities" href="foundation/activities.html"> Activities</a></li>
-<li><a title="Career Opportunities" href="foundation/careers.html"> Careers</a></li>
-<li><a title="Donate To The Mozilla Foundation" href="foundation/donate.html"> Donate</a></li>
-<li><a title="Licensing &amp; Trademarks" href="foundation/licensing.html"> Licensing &amp; Trademarks</a></li>
-<li><a title="Public Documents" href="foundation/documents/"> Public Documents</a></li>
-<li><a title="Statement of Direction" href="foundation/statement-of-direction.html"> Statement of Direction</a></li>
-<li><a title="Contact Us" href="contact/"> Contact Us</a></li>
+<li><a title="Brochure" href="../../about/brochure/"> Brochure</a></li>
+<li><a title="FAQs" href="../../about/faq.html"> FAQs</a></li>
+<li><a title="History" href="../../about/history.html"> History</a></li>
+<li><a title="How Free Is Mozilla?" href="../../about/free.html"> How Free Is Mozilla?</a></li>
+<li><a title="Mozilla Manifesto" href="../../about/mozilla-manifesto.html"> Mozilla Manifesto</a></li>
+<li><a title="Organizations" href="../../about/organizations.html"> Organizations</a></li>
+<li><a title="Policies" href="../../about/policies/"> Policies</a></li>
+<li><a title="Roles and Leadership" href="../../about/roles.html"> Roles and Leadership</a></li>
 
 </ul>
 </li>
@@ -202,19 +202,19 @@ including Mozilla's <a href="http://lists.mozilla.org/listinfo/announce">"Mozill
 </div>
 <div id="footer">
 <ul>
-<li><a href="support/">Support Options</a></li>
-<li><a href="security/">Security Center</a></li>
-<li><a href="privacy-policy.html">Privacy Policy</a></li>
-<li><a href="contact/">Contact Us</a></li>
+<li><a href="../../support/">Support Options</a></li>
+<li><a href="../../security/">Security Center</a></li>
+<li><a href="../../privacy-policy.html">Privacy Policy</a></li>
+<li><a href="../../contact/">Contact Us</a></li>
 </ul>
 <p class="affiliates">International Affiliates: <a href="http://www.mozilla-europe.org/">Mozilla Europe</a> - <a href="http://mozilla.jp/">Mozilla Japan</a> - <a href="http://www.mozillaonline.com/">Mozilla China</a></p>
 <p class="copyright">
-Portions of this content are © 1998–2008 by individual mozilla.org contributors<br>
+Portions of this content are © 1998–2009 by individual mozilla.org contributors<br>
 Content available under a Creative Commons <a href="http://www.mozilla.org/foundation/licensing/website-content.html">license</a></p>
 <p>
-<span>Last modified July  1,  2008</span>
-<span><a href="http://bonsai-www.mozilla.org/cvslog.cgi?file=mozilla-org/html/privacy-policy.html&amp;rev=&amp;root=/www/">Document History</a></span>
-<span><a href="https://doctor.mozilla.org/?action=edit&amp;file=mozilla-org/html/privacy-policy.html">Edit this Page</a></span> <span>(or <a href="/contribute/writing/cvs">via CVS</a>)</span>
+<span>Last modified October  1,  2008</span>
+<span><a href="http://bonsai-www.mozilla.org/cvslog.cgi?file=mozilla-org/html/about/policies/privacy-policy.html&amp;rev=&amp;root=/www/">Document History</a></span>
+<span><a href="https://doctor.mozilla.org/?action=edit&amp;file=mozilla-org/html/about/policies/privacy-policy.html">Edit this Page</a></span> <span>(or <a href="/contribute/writing/cvs">via CVS</a>)</span>
 </p>
 </div>
 </div>
