--- a/q/qu/qui/quizlet.com.html
+++ b/q/qu/qui/quizlet.com.html
@@ -1,62 +1,60 @@
-<!--The following is the downloaded HTML source of the quizlet.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217004652id_/http%3A//quizlet.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the quizlet.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616180547id_/http%3A//quizlet.com/privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" xmlns:fb="http://www.facebook.com/2008/fbml"><head>
 <link rel="shortcut icon" href="http://quizlet.com/favicon.ico">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Privacy Policy | Quizlet</title>
-
-<link rel="stylesheet" href="http://a.quizlet.com/c/style.1229062573.css" type="text/css">
-<script type="text/javascript" src="http://a.quizlet.com/j/english/quizlib.1228619428.js"></script>
-<meta name="keywords" content="flashcards,flash cards,memorization,vocabulary,SAT words,elearning">
+<title>Privacy Policy | Quizlet</title><meta name="keywords" content="flashcards,flash cards,memorization,vocabulary,SAT words,elearning">
 <meta name="description" content="Quizlet is a lightning fast way to memorize vocabulary lists. It's like flashcards, but much more fun and interactive.">
-
+<link rel="stylesheet" href="http://a.quizlet.com/c/style.1245030209.css" type="text/css">
+<script type="text/javascript" src="http://a.quizlet.com/j/english/quizlib.1244422651.js"></script>
 </head>
-
 <body>
-
 <div id="header">
 	<h1><a href="/">Quizlet</a></h1>
+			
+					<div id="facebook-header">
 					
-	<form action="/login/" method="post" class="loggedIn" id="signin">
-		<div>
-			<label for="username">Username</label>
-			<input type="text" tabindex="1" name="username" class="value" id="username">
-			&nbsp; <a href="/sign_up/">Sign Up</a>		</div>
-		<div>
-			<label for="password">Password</label>
-			<input type="password" tabindex="2" class="value" name="password" id="password">
-			<input type="hidden" name="redir" value="/privacy/">			<input type="submit" value="Login">
-		</div>
-		 <div id="rememberWrap">
-			<label>&nbsp;</label>
-			<input type="checkbox" name="rememberMe" id="rememberMe" value="1">
-			<label for="rememberMe" id="rememberLabel">Remember me for 3 weeks</label>
-		</div>
-	</form>
-		
-</div>
-	
-<div id="menu">
+			<a class="fbconnect_login_button" href="#" onclick="FB.Connect.requireSession(function() { window.location=&quot;/?fbreg&quot;;}); return false;">
+		  		<img src="http://static.ak.fbcdn.net/images/fbconnect/login-buttons/connect_dark_medium_long.gif" alt="Connect with Facebook">
+			</a>
+							<a href="http://quizlet.com/faqs/faq-what-is-facebook-connect-and-how-does-it-work/" id="facebook-how">(what's this?)</a>
+				</div>
+				<div id="facebook-or">
+					or
+				</div>
+							<form action="/login/" method="post" class="loggedIn" id="signin">
+			<div>
+				<label for="username">Username</label>
+				<input type="text" tabindex="1" name="username" class="value" id="username">
+				&nbsp; <a href="/sign_up/">Sign Up</a>			</div>
+			<div>
+				<label for="password">Password</label>
+				<input type="password" tabindex="2" class="value" name="password" id="password">
+				<input type="hidden" name="redir" value="/privacy/">				<input type="submit" value="Login">
+			</div>
+			 <div id="rememberWrap">
+				<label>&nbsp;</label>
+				<input type="checkbox" name="rememberMe" id="rememberMe" value="1">
+				<label for="rememberMe" id="rememberLabel">Remember me for 3 weeks</label>
+			</div>
+		</form>
+			</div>
+	<div id="menu">
 <form action="/search.php" method="get" onsubmit="return sendSearch()">
 <div id="search">
 	<span><input type="text" tabindex="3" name="q" id="theq"></span> <input type="submit" id="searchSubmit" value="Search"></div>
 </form>
-
 <ul>
 	<li><a href="/">Home</a></li>
-	<li><a href="/browse/">Browse Subjects</a></li>
-	<li><a href="/features/">Features</a></li>
-	<li><a href="/blog/">Blog</a></li>
-	<li><a href="/sign_up/"><b>Sign Up</b></a></li>
+<li><a href="/features/">Help &amp; Features</a></li>
+<li><a href="/browse/">Find Flashcards</a></li>
+<li><a href="/sign_up/"><b>Make Flashcards</b></a></li>
+<li><a href="/blog/">Blog</a></li>
 </ul>
 
-
 </div>
-
-
 <div id="wrap" class="clear">
-
 <div class="medium"><div class="cb"><div class="bt"><div></div></div><div class="i1"><div class="i2"><div class="i3">
 <h2>Privacy Policy</h2>
 <p>Your privacy is critically important to us. At Brainflare we have a few fundamental principles:</p>
@@ -91,13 +89,19 @@
 </p>
 </div></div></div><div class="bb"><div></div></div></div></div>
 
-<script type="text/javascript" src="http://edge.quantserve.com/quant.js"></script><script type="text/javascript">
-	document.write(unescape("%3Cscript src='http://www.google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-	</script><script src="http://www.google-analytics.com/ga.js" type="text/javascript"></script>
-	<script type="text/javascript">
-	var pageTracker = _gat._getTracker("UA-1203987-1");
-	pageTracker._trackPageview();
-	_qacct="p-5brKQLtleyIQU";quantserve()</script><div id="footer"><p>Copyright © 2005-2008 <a href="http://brainflare.com">Brainflare, Inc.</a> Happy Studies!<br><a rel="nofollow" href="/feedback/"><b>Feedback</b></a> | <a href="/about/">About Quizlet</a> | <a href="/blog/">Blog</a> | <a href="/faq/">FAQs</a> | <a href="/privacy/">Privacy Policy</a> | <a href="/tos/">Terms of Service</a></p><div class="google" id="google-footer"><script type="text/javascript">google_ad_slot="4822435467";google_ad_width=234;google_ad_height=60;qadsense()</script></div></div>
+<script type="text/javascript" src="http://edge.quantserve.com/quant.js"></script>
+<script type="text/javascript">
+document.write(unescape("%3Cscript src=\'http://www.google-analytics.com/ga.js\' type=\'text/javascript\'%3E%3C/script%3E"));
+</script><script src="http://www.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+var pageTracker = _gat._getTracker("UA-1203987-1");
+pageTracker._trackPageview();
+_qacct="p-5brKQLtleyIQU";quantserve()</script><script src="http://static.ak.connect.facebook.com/js/api_lib/v0.4/FeatureLoader.js.php" type="text/javascript"></script>
+	    	 <script type="text/javascript">
+	    	   FB.init("a9e46f8ad71e43914c8d1f3910f35782", "/fb/receiver.html");
+			   
+	    	 </script>
+			<div id="footer"><p>Copyright © 2005-2009 <a href="http://brainflare.com">Brainflare, Inc.</a> Happy Studies!<br><a rel="nofollow" href="/feedback/"><b>Feedback</b></a> | <a href="/about/">About Quizlet</a> | <a href="/blog/">Blog</a> | <a href="/faqs/">FAQs</a> | <a href="/privacy/">Privacy Policy</a> | <a href="/tos/">Terms of Service</a><br>Like Quizlet? <a href="/donate/" onclick="if(pageTracker)pageTracker._trackPageview(&quot;/internal/donate-footer&quot;);">Become a friend</a> and help us make Quizlet even better.</p><div class="google" id="google-footer"><script type="text/javascript">google_ad_slot="7996818787";google_ad_width=468;google_ad_height=60;qadsense();</script></div></div>
 	<div class="clear"></div></div>
 
 </body></html>
