--- a/p/pr/pri/prince.org.html
+++ b/p/pr/pri/prince.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the prince.org privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217015429id_/http%3A//prince.org/privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the prince.org privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616180759id_/http%3A//prince.org/privacy_policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head><title>privacy policy</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"><link rel="stylesheet" type="text/css" href="/_css/main_1.css">
@@ -18,14 +18,20 @@
   <script type="text/javascript" src="http://google.com/coop/cse/brand?form=searchbox_007550774073778458986%3Acneoimw0ggu"></script>
 <!-- Google CSE Search Box Ends -->
 </div></div><div id="menubar">
-<a href="/" title="return to homepage">HOME</a>|<a href="/msg/" title="message boards">FORUMS</a>|<a href="/gallery/" title="gallery of images uploaded by members">GALLERY</a>|<a href="/chat/" title="real-time chat with other members">CHAT</a>|<a href="/events/" title="our detailed calendar of past and future events">EVENTS</a>|<a href="/clubs/" title="find a fanclub near you">FANCLUBS</a>|<a href="/faq/" title="answers to frequently-asked questions">FAQs</a>|<a href="/blog/" title="the staff blog">BLOG</a>|<a href="/notes/" title="send and receive private messages">ORGNOTES</a>|<a href="/prefs/" title="edit your preferences and more">MY ORG</a>&nbsp; &nbsp; 
-</div><div id="dateline">Tue 16th Dec 2008 5:54pm</div><form id="greeting" action="/login.html" method="post">Welcome! <a href="/login.html?login_dest=/privacy_policy.html">Sign up</a> or enter username <input type="text" name="login_un" id="login_un" value="" maxlength="25" style="width:8em"> and password <input type="password" name="login_pw" id="login_pw" value="" maxlength="32" style="width:8em"><input type="hidden" name="login_submit" id="login_submit" value="1"> to <input type="hidden" name="login_dest" id="login_dest" value="NULL"><input type="submit" name="login_login" id="login_login" value="log in"> <input type="checkbox" name="remember" id="remember" value="1"> remember me</form><div id="pagecontent"><h1>prince.org Privacy Policy</h1>
+<a href="/" title="return to homepage">HOME</a>|<a href="/msg/" title="message boards">FORUMS</a>|<a href="/gallery/" title="gallery of images uploaded by members">GALLERY</a>|<a href="/chat/" title="real-time chat with other members">CHAT</a>|<a href="/events/" title="our detailed calendar of past and future events">EVENTS</a>|<a href="/wiki/Princepedia" title="user-maintained encyclopedia of Prince information">PRINCEPEDIA</a><!-- <a href="/clubs/" title="find a fanclub near you">FANCLUBS</a>|<a href="/faq/" title="answers to frequently-asked questions">FAQs</a> -->|<a href="/blog/" title="the staff blog">BLOG</a>|<a href="/notes/" title="send and receive private messages">ORGNOTES</a>|<a href="/prefs/" title="edit your preferences and more">MY ORG</a>&nbsp; &nbsp; 
+</div><div id="dateline">Tue 16th Jun 2009 11:07am</div><form id="greeting" action="/login.html" method="post">Welcome! <a href="/login.html?login_dest=/privacy_policy.html">Sign up</a> or enter username <input type="text" name="login_un" id="login_un" value="" maxlength="25" style="width:8em"> and password <input type="password" name="login_pw" id="login_pw" value="" maxlength="32" style="width:8em"><input type="hidden" name="login_submit" id="login_submit" value="1"> to <input type="hidden" name="login_dest" id="login_dest" value="NULL"><input type="submit" name="login_login" id="login_login" value="log in"> <input type="checkbox" name="remember" id="remember" value="1"> remember me</form><div id="pagecontent"><h1>prince.org Privacy Policy</h1>
 <h2>What this Privacy Policy Covers</h2>
 
 This Privacy Policy covers prince.org's treatment of personally
 identifiable information that prince.org collects 
 when you are on the prince.org site, and when you use
 prince.org's services. 
+<!--?php/*
+This policy also covers prince.org's treatment 
+of any personally identifiable information that prince.org's business 
+partners share with prince.org or that prince.org may collect 
+on a partner's site.
+*/?-->
 This policy does not apply to the practices of companies that
 prince.org does not own or control, or to people that prince.org does
 not employ or manage. 
@@ -84,17 +90,22 @@ substantial changes in the way we use your personal information we
 will notify you by posting a prominent announcement on our pages, and
 at our discretion, optionally e-mailing all users.
 
+<h2>Copyright</h2>
+
+See the <a href="$SITEMAP[agreement]" $target="">terms of service</a> for 
+more information about copyright and other intellectual property.
+
 <h2>Questions or Suggestions</h2>
 
 If you have questions or suggestions please <a href="/contact.html">contact us</a>. 
 
 </div><div id="copyright">
-copyright © 1998-2008 prince.org. all rights reserved.
+copyright © 1998-2009 prince.org. all rights reserved.
 &nbsp; <div id="footerlinks"><a href="/faq/1_prince.org_Site_FAQ">about</a> ·
 <a href="http://prince.org/user_agreement.html" target="_blank">terms of service</a> ·
 <a href="http://prince.org/privacy_policy.html" target="_blank">privacy</a> ·
 <a href="/contact.html">contact us</a> &nbsp; </div>
- <!-- 8.7 msms -->
+ <!-- 24.9 msms -->
 </div>
 
 
