realdealdocs.com (archived on 2009-06-16)
{
  "alexa_rank": 99354,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 3832,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.88,
  "homepage_snapshot_redirected_domain": "realdealdocs.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090321152338id_/http://realdealdocs.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090321152338id_/http%3A//realdealdocs.com",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "realdealdocs.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090616181119id_/http%3A//www.realdealdocs.com/privacy-policy.aspx",
  "policy_title": "RealDealDocs - About RealDealDocs",
  "policy_url": "realdealdocs.com/privacy-policy.aspx",
  "sha1": "b6a820251cd0288d62987fb76df3db51af98e7e1",
  "simhash": 4147346871166158949,
  "simhash_updated": false,
  "site_hostname": "realdealdocs.com",
  "site_url": "http://realdealdocs.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20090616181119",
  "word_count": 606,
  "year": 2009
}

--- a/r/re/rea/realdealdocs.com.html
+++ b/r/re/rea/realdealdocs.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the realdealdocs.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217103511id_/http%3A//www.realdealdocs.com/privacy-policy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the realdealdocs.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616181119id_/http%3A//www.realdealdocs.com/privacy-policy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <!-- site attributes -->
@@ -39,7 +39,7 @@
 
 <body>
 <form name="loginform" method="post" action="privacy-policy.aspx" id="loginform">
-<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUJOTAzODM2NjY4D2QWAgIBD2QWAmYPZBYCZg9kFgICCg8PFgIeC05hdmlnYXRlVXJsBUxodHRwOi8vbWVtYmVyLnJlYWxkZWFsZG9jcy5jb20vbWVtYmVycy9wdGl1c2Vycy9sb2dpbi8/ZW1haWw9ezB9JmxvZ29mZj10cnVlZGRk">
+<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUJOTAzODM2NjY4D2QWAgIBD2QWAmYPZBYCZg9kFgICCg8PFgIeC05hdmlnYXRlVXJsBUxodHRwOi8vbWVtYmVyLnJlYWxkZWFsZG9jcy5jb20vbWVtYmVycy9wdGl1c2Vycy9sb2dpbi8/ZW1haWw9ezB9JmxvZ29mZj10cnVlZGRkwt4vQgnEJotfLVZ1gr49C7KhWRA=">
 
 
 
@@ -174,7 +174,7 @@
 	  <p style="font-size:11px;">&nbsp;</p>
 	  <p style="font-size:11px;">Copyright © 2008 Practice Technologies. All Rights Reserved.<br>
   <a href="http://www.realdealdocs.com/privacy-policy.aspx" onclick="javascript:window.open('http://www.realdealdocs.com/privacy-policy.aspx','name','height=500,width=800,resizable=yes,addressbar=yes,scrollbars=yes,toolbar=yes,status=yes'); return false;">Privacy Policy</a>    |   <a href="http://www.realdealdocs.com/terms-of-use.aspx" onclick="javascript:window.open('http://www.realdealdocs.com/terms-of-use.aspx','name','height=500,width=800,resizable=yes,addressbar=yes,scrollbars=yes,toolbar=yes,status=yes'); return false;">Terms Of Use</a> | <a href="http://agreements.realdealdocs.com" onclick="javascript:urchinTracker('/click_track/realdealdocs.com/footer/'+this.href);" target="_blank">Legal Agreements</a> | <br>
-	    <a href="http://www.realdealdocs.com/related-resources/legal-resources.html" onclick="javascript:urchinTracker('/click_track/realdealdocs.com/footer/'+this.href);">Resources</a> | <a href="http://www.smartrules.com">SmartRules Online</a> | <a href="http://sec-filings-exhibits.realdealdocs.com">SEC Filings</a></p>
+	    <a href="http://www.realdealdocs.com/related-resources/legal-resources.html" onclick="javascript:urchinTracker('/click_track/realdealdocs.com/footer/'+this.href);">Resources</a> | <a href="http://www.smartrules.com">SmartRules Online</a> | <a href="http://sec-filings-exhibits.realdealdocs.com">SEC Filings</a> | <a href="http://www.askourlawyers.com" target="_blank">Ask Our Lawyers</a></p>
   </div>
   
 	</li>
@@ -209,7 +209,7 @@
       Suite 200<br>
       Venice, CA 90291 	<br>
       [p] 310.395.8830 x825<br>
-      [p] 866.877.3770 x825<br>
+      [p] (877) 595-5179 <br>
       <br>
       [e] <a href="mailto:sales@realdealdocs.com">sales@realdealdocs.com</a><br>
     [e] <a href="mailto:support@realdealdocs.com">support@realdealdocs.com</a>
@@ -307,5 +307,6 @@ src="http://www.googleadservices.com/pagead/conversion/1059356111/extclk?script=
 
 
 
-</form>
+
+<input type="hidden" name="__EVENTVALIDATION" id="__EVENTVALIDATION" value="/wEWBALrrcOkAwKKhdpYAu3V85kJAvGWlIAKm2Qx5GU5HvfVCwc+sX034m6MrZE="></form>
 </body></html>
