blackwasp.co.uk (archived on 2009-06-16)
{
  "alexa_rank": 234830,
  "analysis_subcorpus": true,
  "categories": "education;informationtech",
  "char_count": 2156,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 9.1,
  "homepage_snapshot_redirected_domain": "blackwasp.co.uk",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090409021338id_/http://www.blackwasp.co.uk/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090409021338id_/http%3A//blackwasp.co.uk",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "blackwasp.co.uk",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090616181653id_/http%3A//www.blackwasp.co.uk/PrivacyPolicy.aspx",
  "policy_title": "Privacy Policy :: BlackWasp Software Development",
  "policy_url": "blackwasp.co.uk/PrivacyPolicy.aspx",
  "sha1": "b3231a3fc6b0964e4551b123d657f13ab7fa93b6",
  "simhash": 10370255753275591433,
  "simhash_updated": false,
  "site_hostname": "blackwasp.co.uk",
  "site_url": "http://blackwasp.co.uk",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20090616181653",
  "word_count": 360,
  "year": 2009
}

--- a/b/bl/bla/blackwasp.co.uk.html
+++ b/b/bl/bla/blackwasp.co.uk.html
@@ -1,15 +1,16 @@
-<!--The following is the downloaded HTML source of the blackwasp.co.uk privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216044305id_/http%3A//www.blackwasp.co.uk/PrivacyPolicy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the blackwasp.co.uk privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616181653id_/http%3A//www.blackwasp.co.uk/PrivacyPolicy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>
 	Privacy Policy :: BlackWasp Software Development
-</title><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><link href="BlackWasp.css" rel="stylesheet" type="text/css"><link href="Information.css" rel="stylesheet" type="text/css"><meta name="Description" content="This page describes the information that may be provided by you to the BlackWasp web site and how we value your prvivacy."></head><body><form name="aspnetForm" method="post" action="PrivacyPolicy.aspx" id="aspnetForm">
-<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUKLTcwODg1MTE2Ng9kFgJmD2QWAgIDD2QWBAIDD2QWAgIBDw9kFgIeCm9ua2V5cHJlc3MFWmphdmFzY3JpcHQ6aWYgKGV2ZW50LmtleUNvZGUgPT0gMTMpIF9fZG9Qb3N0QmFjaygnY3RsMDAkU2VhcmNoQm94MSRHb29nbGVTZWFyY2hCdXR0b24nLCcnKWQCBw9kFgICAQ8PFgIeBFRleHQFBDIwMDhkZGTRSk9QNZixvE2wBIlfB7gqZL0Afg==">
-<div id="wrapper"><table class="layouttable"><tbody><tr><td class="headerzone"><table class="layouttable"><tbody><tr><td class="logozone"><img src="template/Logo.gif" alt="BlackWasp"></td><td class="bannerzone"></td></tr></tbody></table></td></tr><tr><td class="menuzone"><table class="layouttable"><tbody><tr><td>
-<ul><li><a href="Default.aspx">Home</a></li><li><a href="NumberToWordsComponent.aspx">Components</a></li><li><a href="Articles.aspx">Articles</a></li><li><a href="Tutorials.aspx">Tutorials</a></li><li><a href="Contact.aspx">Contact</a></li><li><a href="SiteMap.aspx">Site Map</a></li></ul></td><td>
+</title><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><link href="BlackWasp.css" rel="stylesheet" type="text/css"><link href="Articles.css" rel="stylesheet" type="text/css"><link href="FeaturedItem.css" rel="stylesheet" type="text/css"><meta name="Description" content="This page describes the information that may be provided by you to the BlackWasp web site and how we value your prvivacy."></head><body><form name="aspnetForm" method="post" action="PrivacyPolicy.aspx" id="aspnetForm">
+<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUKLTcwODg1MTE2NmRkeuK/XUDzm41D9RpedXQqoCopobE=">
+
+<input type="hidden" name="__EVENTVALIDATION" id="__EVENTVALIDATION" value="/wEWBQKTtbLvDALbkYjvCwK78pXUCAKQ9uu7CwKxnvDVDunPToX7sswIVaUYA+QKgsPOHZlA"><div id="wrapper"><table class="layouttable"><tbody><tr><td class="headerzone"><table class="layouttable"><tbody><tr><td class="logozone"><img src="template/Logo.gif" alt="BlackWasp"></td><td class="bannerzone"></td></tr></tbody></table></td></tr><tr><td class="menuzone"><table class="layouttable"><tbody><tr><td>
+<ul><li><a href="Default.aspx">Home</a></li><li><a href="NumberToWordsComponent.aspx">Components</a></li><li><a href="Articles.aspx">Articles</a></li><li><a href="Tutorials.aspx">Tutorials</a></li><li><a href="Contact.aspx">Contact</a></li><li><a href="About.aspx">About</a></li><li><a href="SiteMap.aspx">Site Map</a></li></ul></td><td>
 <div class="searchbox"><input name="ctl00$SearchBox1$q" type="text" maxlength="512" id="ctl00_SearchBox1_q" class="searchtext" onkeypress="javascript:if (event.keyCode == 13) __doPostBack('ctl00$SearchBox1$GoogleSearchButton','')">
 <a id="ctl00_SearchBox1_GoogleSearchButton" class="searchbutton" href="javascript:__doPostBack('ctl00$SearchBox1$GoogleSearchButton','')">Google Search</a>
-<input type="hidden" name="ctl00$SearchBox1$cx" id="ctl00_SearchBox1_cx" value="005029457009511303434:dkqlq0w0lsk"><input type="hidden" name="ctl00$SearchBox1$cof" id="ctl00_SearchBox1_cof" value="FORID:11"></div></td></tr></tbody></table></td></tr><tr><td class="contentzone">
+<input type="hidden" name="ctl00$SearchBox1$cx" id="ctl00_SearchBox1_cx" value="005029457009511303434:dkqlq0w0lsk"><input type="hidden" name="ctl00$SearchBox1$cof" id="ctl00_SearchBox1_cof" value="FORID:11"></div></td></tr></tbody></table></td></tr><tr><td class="container"><table class="layouttable"><tbody><tr><td class="sidemenucell"><div class="sidemenu"><ul><li>Article Zones<ul><li><a href="DotNetFrameworkArticles.aspx">.NET Framework</a></li><li><a href="AlgorithmsArticles.aspx">Algorithms and Data Structures</a></li><li><a href="CSharpArticles.aspx">C# Programming</a></li><li><a href="DebuggingArticles.aspx">Debugging</a></li><li><a href="DesignPatternsArticles.aspx">Design Patterns</a></li><li><a href="GraphicsArticles.aspx">Graphics</a></li><li><a href="IOArticles.aspx">Input / Output</a></li><li><a href="NetworkArticles.aspx">Network and Internet</a></li><li><a href="PerformanceArticles.aspx">Performance</a></li><li><a href="ProgrammingConceptsArticles.aspx">Programming Concepts</a></li><li><a href="RefactoringArticles.aspx">Refactoring</a></li><li><a href="SecurityArticles.aspx">Security</a></li><li><a href="SQLArticles.aspx">SQL Server</a></li><li><a href="SystemInfoArticles.aspx">System Information</a></li><li><a href="VSArticles.aspx">Visual Studio</a></li><li><a href="WindowsProgrammingArticles.aspx">Windows Forms</a></li></ul></li></ul></div></td><td class="contentzone">
 <h1>Privacy Policy</h1>
 <h2>Personal Information Collection</h2>
 <p>Your personal information will only be collected if you submit it to BlackWasp using the contact form. Your name, email address and any comments you make will be retained. If you elect not to have your details recorded by indicating that you do not want to be contacted then your details will be erased after your query is answered.</p>
@@ -20,11 +21,12 @@
 <h2>Linked Web Sites</h2>
 <p>The BlackWasp web site contains links to other web sites. The privacy policy of these web sites may differ from that of the BlackWasp web site.</p>
 <h2>Advertising</h2>
-<p>This web site is funded by advertising placements. The advertisement code may create cookies on your browser and read the contents of these cookies. The advertisements may also use web beacons to collect browsing information. This information is not retained by BlackWasp.</p>
+<p>This web site is funded by advertising placements. The advertisement code may create cookies on your browser and read the contents of these cookies. The advertisements may also use web beacons to collect browsing information. This information is not retained by BlackWasp. Some advertising on the BlackWasp web site is provided by the Google Adsense programme. This includes interest-based avertising. The following information relates to Google's system:</p>
+<ul><li>Google, as a third-party vendor, uses cookies to serve ads on the web site.</li><li>Google's use of the DART cookie enables it to serve ads to you based on your visit to this web site and other sites on the Internet.</li><li>Users may opt out of the use of the DART cookie by visiting the <a href="http://www.google.co.uk/privacy_ads.html">Google ad and content network privacy policy</a>.</li></ul>
 <h2>Policy Changes</h2>
 <p>This privacy policy is subject to change without notice.  Changes to the policy will be made available via this web page.</p>
-</td></tr><tr><td class="footerzone">
-<table class="layouttable"><tbody><tr><td class="footerlinkzone"><ul><li><a href="Copyright.aspx">©2006-<span id="ctl00_Footer1_CopyrightYearLabel">2008</span> BlackWasp All Rights Reserved</a></li><li><a href="PrivacyPolicy.aspx">Privacy Policy</a></li><li><a href="TermsOfUse.aspx">Terms of Use</a></li><li><a href="SupportUs.aspx">Support Us</a></li></ul></td><td class="rsslinkzone"><a href="http://feeds.feedburner.com/BlackwaspLatestAdditions">RSS</a> <a href="http://feeds.feedburner.com/BlackwaspLatestAdditions"><img src="/rss/rss.gif" alt="RSS Feed" align="top" border="0"></a></td></tr></tbody></table></td></tr></tbody></table></div><div class="gout"><script type="text/javascript"><!--
+</td></tr></tbody></table></td></tr><tr><td class="footerzone">
+<table class="layouttable"><tbody><tr><td class="footerlinkzone"><ul><li><a href="Copyright.aspx">©2006-<span id="ctl00_Footer1_CopyrightYearLabel">2009</span> BlackWasp All Rights Reserved</a></li><li><a href="PrivacyPolicy.aspx">Privacy Policy</a></li><li><a href="TermsOfUse.aspx">Terms of Use</a></li></ul></td><td class="rsslinkzone"><a href="http://feeds.feedburner.com/BlackwaspLatestAdditions">RSS</a> <a href="http://feeds.feedburner.com/BlackwaspLatestAdditions"><img src="/rss/rss.gif" alt="RSS Feed" align="top" border="0"></a></td></tr></tbody></table></td></tr></tbody></table></div><div class="gout"><script type="text/javascript"><!--
 google_ad_client = "pub-3760328251384501";
 /* Footer Leaderboard */
 google_ad_slot = "9569760210";
@@ -33,13 +35,5 @@ google_ad_height = 90;
 //-->
 </script>
 <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script></div>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
-<script type="text/javascript">
-_uacct = "UA-784824-1";
-urchinTracker();
-</script>
-
-<input type="hidden" name="__EVENTVALIDATION" id="__EVENTVALIDATION" value="/wEWBQLVwaySBwLbkYjvCwK78pXUCAKQ9uu7CwKxnvDVDsvY5Ur5lXN+wS9REWBxQiACUbI1"></form>
+</script></div></form>
 </body></html>
