greatgamesexperiment.com (archived on 2009-06-16)
{
  "alexa_rank": 63427,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 4721,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.23,
  "homepage_snapshot_redirected_domain": "greatgamesexperiment.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090331123350id_/http://www.greatgamesexperiment.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090331123350id_/http%3A//greatgamesexperiment.com",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "greatgamesexperiment.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090616185601id_/http%3A//www.greatgamesexperiment.com/privacy",
  "policy_title": "Privacy Policy on Great Games Experiment",
  "policy_url": "greatgamesexperiment.com/privacy",
  "sha1": "2735fbb519535b19b184ed5f2db1af3bc7e2077d",
  "simhash": 1219719684331999642,
  "simhash_updated": false,
  "site_hostname": "greatgamesexperiment.com",
  "site_url": "http://greatgamesexperiment.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20090616185601",
  "word_count": 730,
  "year": 2009
}

--- a/g/gr/gre/greatgamesexperiment.com.html
+++ b/g/gr/gre/greatgamesexperiment.com.html
@@ -1,16 +1,17 @@
-<!--The following is the downloaded HTML source of the greatgamesexperiment.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216012032id_/http%3A//www.greatgamesexperiment.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the greatgamesexperiment.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616185601id_/http%3A//www.greatgamesexperiment.com/privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://www.facebook.com/2008/fbml"><head>
 <title>Privacy Policy on Great Games Experiment</title>
-			<meta name="Title" content="Privacy Policy on Great Games Experiment"><script language="JavaScript" type="text/javascript" src="/js/115/prototype.js"></script><script language="JavaScript" type="text/javascript" src="/js/115/scriptaculous.js"></script><script type="text/javascript" src="https://web.archive.org/js/115/builder.js"></script><script type="text/javascript" src="https://web.archive.org/js/115/effects.js"></script><script type="text/javascript" src="https://web.archive.org/js/115/dragdrop.js"></script><script type="text/javascript" src="https://web.archive.org/js/115/controls.js"></script><script type="text/javascript" src="https://web.archive.org/js/115/slider.js"></script><script type="text/javascript" src="https://web.archive.org/js/115/sound.js"></script><script language="JavaScript" type="text/javascript" src="/js/115/extensions.js"></script><link rel="STYLESHEET" type="text/css" href="/css/204/wide.css"><link rel="STYLESHEET" type="text/css" href="/css/204/style.css"><link rel="STYLESHEET" type="text/css" href="/css/204/navigation.css"><link rel="STYLESHEET" type="text/css" href="/css/204/searchform.css"><script language="JavaScript" type="text/javascript">		function searchcheck(){
-			var node = $('search_query');
-			if(node.value == "")
-				//new Effect.Highlight('search_query', {startcolor:'#FF0000', endcolor:'#ffffff',duration: 1})
-				//window.setTimeout("$('search_query').style.backgroundColor='#ffffff';",1050);
-				return false;
-		}
-		</script><style type="text/css">#menu div.home   	{background-position:  -21px -90px; width:38px}#menu div.home a	{background-position:  -21px -60px}</style><!--[if IE]>
+			<meta name="Title" content="Privacy Policy on Great Games Experiment"><script language="JavaScript" type="text/javascript" src="/js/115/prototype.js"></script><script language="JavaScript" type="text/javascript" src="/js/115/scriptaculous.js"></script><script type="text/javascript" src="https://web.archive.org/js/115/builder.js"></script><script type="text/javascript" src="https://web.archive.org/js/115/effects.js"></script><script type="text/javascript" src="https://web.archive.org/js/115/dragdrop.js"></script><script type="text/javascript" src="https://web.archive.org/js/115/controls.js"></script><script type="text/javascript" src="https://web.archive.org/js/115/slider.js"></script><script type="text/javascript" src="https://web.archive.org/js/115/sound.js"></script><script language="JavaScript" type="text/javascript" src="/js/115/jquery.js"></script><script language="JavaScript" type="text/javascript" src="/js/115/gge.js"></script><script language="JavaScript" type="text/javascript" src="/js/115/extensions.js"></script><script language="JavaScript" type="text/javascript" src="http://static.ak.connect.facebook.com/js/api_lib/v0.4/FeatureLoader.js.php"></script><link rel="STYLESHEET" type="text/css" href="/css/204/blueprint/screen.css"><link rel="STYLESHEET" type="text/css" href="/css/204/wide.css"><link rel="STYLESHEET" type="text/css" href="/css/204/style.css"><link rel="STYLESHEET" type="text/css" href="/css/204/navigation.css"><link rel="STYLESHEET" type="text/css" href="/css/204/searchform.css"><script language="JavaScript" type="text/javascript">	function searchcheck(){
+		var node = $('search_query');
+		if(node.value == "")
+			//new Effect.Highlight('search_query', {startcolor:'#FF0000', endcolor:'#ffffff',duration: 1})
+			//window.setTimeout("$('search_query').style.backgroundColor='#ffffff';",1050);
+			return false;
+	}
+	
+	user_id=0;</script><style type="text/css">#menu div.home   	{background-position:  -21px -90px; width:38px}#menu div.home a	{background-position:  -21px -60px}</style><!--[if IE]>
 <link rel="stylesheet" type="text/css" href="/css/204/ie.css" />
 <![endif]-->
 <link rel="shortcut icon" href="/favicon.ico">
@@ -43,7 +44,7 @@
 
 <h3>About this Privacy Policy</h3>
 
-<p>Great Games Experiment and GarageGames both greatly value the privacy of customers, visitors, and users to and of this web site.&nbsp; This document covers the types of personal information that is collected as a participator on this web site and the manner in which it is used.&nbsp; GarageGames considers personal information to be all information that renders you, the participator, identifiable -- including name, email address, or any other information that is not made publicly available by the user.</p>
+<p>Great Games Experiment and PushButton Labs both greatly value the privacy of customers, visitors, and users to and of this web site.&nbsp; This document covers the types of personal information that is collected as a participator on this web site and the manner in which it is used.&nbsp; PushButton Labs considers personal information to be all information that renders you, the participator, identifiable -- including name, email address, or any other information that is not made publicly available by the user.</p>
 <p>This policy is part of and subject to the Terms of Service.&nbsp; Through your use of this web site, you are consenting that you agree with terms outlined in both the Terms of Service and this Privacy Policy.</p>
 
 <h3>Information We Collect</h3>
@@ -59,7 +60,7 @@
 <h3>How We Use Information</h3>
 <ul>
 	<li>Information you submit, including opinions and comments, is used by the Great Games Experiment to provide to visitors of the site features and functionality.</li>
-	<li>Personally identifiable information is used by GarageGames and GarageGames alone to evaluate and implement better design practices and site processes.</li>
+	<li>Personally identifiable information is used by PushButton Labs and PushButton Labs alone to evaluate and implement better design practices and site processes.</li>
 	<li>Cookies are used to provide convenience to site visitors, enabling "remember me" functionality on logins and user profile specific site participation.</li>
 	<li>Your name and email address will not be disclosed or used for any third-party commercial or marketing campaigns without provided consent from individuals registering an account under that corresponding name and email address.</li>
 </ul>
@@ -88,15 +89,18 @@
 			<div class="clear">&nbsp;</div>
 			<div id="footer">
 				<div><a href="/sitemap/">Site Map</a> | <a href="/contact/">Contact Us</a> | <a href="/media-kit/">Media Kit</a> | <a href="/logo-kit/">Logo Kit</a> | <a href="/terms/">Terms of Service</a> | <a href="/privacy/">Privacy Policy</a> | <a href="/feeds/"><img src="/images/minirss.gif" style="vertical-align: middle;"> </a><a href="/feeds/">Feeds</a> | <a href="http://blog.greatgamesexperiment.com">Blog</a> | <a href="/help">Help</a></div>
-				Copyright © GarageGames.com 2006 All Rights Reserved - <span style="font-size: 10px;"><a href="http://www.garagegames.com">Game Development</a></span>
+								Copyright © <a href="http://pushbuttonlabs.com">PushButton Labs</a> 2009 All Rights Reserved
 			</div>
 		</div>
 				<div id="prompt" class="lightbox" style="display:none"><a href="#" class="close_lightbox" onclick="closelightbox();return false;"><img src="/css/mini_gallery_x.jpg" alt="Close Prompt"></a><div id="prompt_content">&nbsp;</div></div>
 	</div>
-<script src="/js/1/urchin.js" type="text/javascript">
-</script>
 <script type="text/javascript">
-_uacct = "UA-30217-8";
-urchinTracker();
-</script>
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-8827583-1");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 </body></html>
