visifire.com (archived on 2009-06-16)
{
  "alexa_rank": 195156,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 6103,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.2,
  "homepage_snapshot_redirected_domain": "visifire.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090331083612id_/http://www.visifire.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090331083612id_/http%3A//visifire.com",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "visifire.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090616190506id_/http%3A//www.visifire.com/privacypolicy.php",
  "policy_title": "Silverlight charting component",
  "policy_url": "visifire.com/privacypolicy.php",
  "sha1": "a7e75c713458c613dc321f80fec9c726793afd99",
  "simhash": 13057805918543977822,
  "simhash_updated": false,
  "site_hostname": "visifire.com",
  "site_url": "http://visifire.com",
  "smog": 15.47,
  "strict_updated": true,
  "timestamp": "20090616190506",
  "word_count": 987,
  "year": 2009
}

--- a/v/vi/vis/visifire.com.html
+++ b/v/vi/vis/visifire.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the visifire.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216152840id_/http%3A//visifire.com/privacypolicy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the visifire.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616190506id_/http%3A//www.visifire.com/privacypolicy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
     <title>Silverlight charting component</title>
@@ -15,7 +15,7 @@
 	<div id="header" align="justify">
 	<a href="/"><img src="/images/logo_visifire.png" alt="Logo" id="logo" border="0" height="71" width="186"></a>
 	<div id="slogan"><img src="/images/slogan.png" alt="slogan"></div>
-	<div id="linkstop" class="links_top"><a href="/">Home</a> | <a href="/download_silverlight_charts.php">Downloads</a> | <a href="/silverlight_charts_gallery.php">Gallery</a> | <a href="/learn_silverlight_charts.php">Learn</a> | <a href="/forums">Forums</a> | <a href="/blog">Blog</a> | <a href="/license.php">License</a></div>
+	<div id="linkstop" class="links_top"><a href="/">Home</a> | <a href="/download_silverlight_charts.php">Downloads</a> | <a href="/silverlight_charts_gallery.php">Gallery</a> | <a href="/learn_silverlight_charts.php">Learn</a> | <a target="_blank" href="/forums">Forums</a> | <a href="/blog">Blog</a> | <a href="/license.php">License</a></div>
 </div>
 
             
@@ -70,8 +70,8 @@
 <div id="footer">
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
   <tbody><tr>
-    <td class="links_footer"><div align="left"><a href="/">Home</a> | <a href="/download_silverlight_charts.php">Downloads</a> | <a href="/silverlight_charts_gallery.php">Gallery</a> | <a href="/learn_silverlight_charts.php">Learn</a> | <a href="/forums">Forums</a> | <a href="/blog">Blog</a> | <a href="/license.php">License</a> | <a id="visiContact" href="#" onclick="return create();">Contact Us</a></div></td>
-    <td class="links_footer"><div align="right"><a href="/privacypolicy.php">Privacy Policy</a> © <a rel="nofollow" href="http://www.webyog.com">Webyog</a> 2008 | <a href="/aboutus.php">About Us</a> </div></td>
+    <td class="links_footer"><div align="left"><a href="/">Home</a> | <a href="/download_silverlight_charts.php">Downloads</a> | <a href="/silverlight_charts_gallery.php">Gallery</a> | <a href="/learn_silverlight_charts.php">Learn</a> | <a target="_blank" href="/forums">Forums</a> | <a href="/blog">Blog</a> | <a href="/license.php">License</a> | <a id="visiContact" href="#" onclick="return create();">Contact Us</a></div></td>
+    <td class="links_footer"><div align="right"><a href="/privacypolicy.php">Privacy Policy</a> © <a rel="nofollow" href="http://www.webyog.com">Webyog</a> 2009 | <a href="/aboutus.php">About Us</a> </div></td>
   </tr>
 </tbody></table>
 <br>
